# carsharing

./: .gitignore  go.work  go.work.sum
api-gateway/: .dockerignore  Dockerfile  Dockerfile.dockerignore  docker-compose.infra.yml  docker-compose.yml  go.mod  go.sum
booking-service/: .mockery.yaml  Dockerfile  Dockerfile.dockerignore  docker-compose.yml  go.mod  go.sum
car-service/: .dockerignore  .mockery.yaml  Dockerfile  Dockerfile.dockerignore  docker-compose.yml  go.mod  go.sum
document-analyzer/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
document-analyzer/config/: config.yaml  docker.yml
document-analyzer/scripts/: update_protos.py
document-analyzer/src/base/: common_pb2.py  common_pb2_grpc.py
document-analyzer/src/base/user/: user_pb2.py  user_pb2_grpc.py
document-analyzer/src/car_rental_document_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
document-analyzer/src/document_analyzer/: analyzer.py  config.py  main.py  publisher.py  server.py  servicer.py  storage.py
document-analyzer/src/event/user/: document_pb2.py  document_pb2_grpc.py
document-analyzer/src/service/user/: document_pb2.py  document_pb2_grpc.py
protos/: go.mod  go.sum
shared/: go.mod  go.sum
telematics-service/: .dockerignore  Dockerfile  docker-compose.yml  docker.yml  go.mod  go.sum
telemetry-service/: Dockerfile  docker-compose.yml  docker.yml  go.mod  go.sum
trip-service/: .mockery.yaml  Dockerfile  Dockerfile.dockerignore  docker-compose.yml  go.mod  go.sum
user-service/: .mockery.yaml  go.mod  (+4 more)
(+713 files in other folders)
