[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-rental-document-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # gRPC + Protobuf  (must match versions used to generate the vendored stubs)
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "protobuf>=5.0.0,<7.0.0",
    # Document analysis
    "python-doctr[torch]>=0.10.0",
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    # MinIO
    "minio>=7.2.0",
    # NATS
    "nats-py>=2.6.0",
    # Config
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
document-analyzer = "document_analyzer.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
